--- a/samples/TodoApp/TodoApp.WPF/TodoApp.WPF.csproj
+++ b/samples/TodoApp/TodoApp.WPF/TodoApp.WPF.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Datasync.Client" Version="5.1.8" />
+		<PackageReference Include="Microsoft.Datasync.Client" Version="6.0.0-preview.3" />
 	</ItemGroup>
 
 	<ItemGroup>
