--- a/samples/TodoApp/TodoApp.Data/TodoApp.Data.csproj
+++ b/samples/TodoApp/TodoApp.Data/TodoApp.Data.csproj
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Datasync.Client" Version="6.0.0-preview.3" />
+		<PackageReference Include="Microsoft.Datasync.Client" Version="6.0.0" />
 		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
 	</ItemGroup>
