--- a/samples/TodoApp/TodoApp.UWP/TodoApp.UWP.csproj
+++ b/samples/TodoApp/TodoApp.UWP/TodoApp.UWP.csproj
@@ -152,7 +152,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Datasync.Client" Version="6.0.0-preview.3" />
+    <PackageReference Include="Microsoft.Datasync.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.14" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI" Version="7.1.3" />
   </ItemGroup>
