--- a/samples/TodoApp/TodoAppService.NET6/TodoAppService.NET6.csproj
+++ b/samples/TodoApp/TodoAppService.NET6/TodoAppService.NET6.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Datasync" Version="6.0.0-preview.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Datasync.EFCore" Version="6.0.0-preview.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Datasync" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Datasync.EFCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.21">
       <PrivateAssets>all</PrivateAssets>
