--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.InMemory.Tests/Microsoft.AspNetCore.Datasync.InMemory.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.InMemory.Tests/Microsoft.AspNetCore.Datasync.InMemory.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\Shared.Build.props" />
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Datasync.Common\Datasync.Common.csproj" />
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.InMemory\Microsoft.AspNetCore.Datasync.InMemory.csproj" />
+    <ProjectReference Include="..\..\shared\Datasync.Common\Datasync.Common.csproj" />
   </ItemGroup>
 </Project>
