--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.EFCore.Tests/Microsoft.AspNetCore.Datasync.EFCore.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.EFCore.Tests/Microsoft.AspNetCore.Datasync.EFCore.Tests.csproj
@@ -2,6 +2,8 @@
   <Import Project="..\..\Shared.Build.props" />
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.24" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.EFCore\Microsoft.AspNetCore.Datasync.EFCore.csproj" />
