Added Cosmos test DbContext.

--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.EFCore.Tests/Microsoft.AspNetCore.Datasync.EFCore.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.EFCore.Tests/Microsoft.AspNetCore.Datasync.EFCore.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\Shared.Build.props" />
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.24" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
