--- a/sdk/test/shared/Datasync.Service/Datasync.Service.csproj
+++ b/sdk/test/shared/Datasync.Service/Datasync.Service.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <Import Project="..\..\Shared.Build.props" />
 
   <ItemGroup>
@@ -16,5 +16,7 @@
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.Abstractions\Microsoft.AspNetCore.Datasync.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.EFCore\Microsoft.AspNetCore.Datasync.EFCore.csproj" />
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.InMemory\Microsoft.AspNetCore.Datasync.InMemory.csproj" />
+    <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync\Microsoft.AspNetCore.Datasync.csproj" />
+    <ProjectReference Include="..\Datasync.Common\Datasync.Common.csproj" />
   </ItemGroup>
 </Project>
