Added basic create service tests.

--- a/sdk/src/server/Microsoft.AspNetCore.Datasync.InMemory/Microsoft.AspNetCore.Datasync.InMemory.csproj
+++ b/sdk/src/server/Microsoft.AspNetCore.Datasync.InMemory/Microsoft.AspNetCore.Datasync.InMemory.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Microsoft.AspNetCore.Datasync.Tests" />
     <InternalsVisibleTo Include="Microsoft.AspNetCore.Datasync.InMemory.Tests" />
   </ItemGroup>
 
