--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.Tests/Microsoft.AspNetCore.Datasync.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.Tests/Microsoft.AspNetCore.Datasync.Tests.csproj
@@ -1,7 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <Import Project="..\..\Shared.Build.props" />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync\Microsoft.AspNetCore.Datasync.csproj" />
     <ProjectReference Include="..\..\shared\Datasync.Common\Datasync.Common.csproj" />
+    <ProjectReference Include="..\..\shared\Datasync.Service\Datasync.Service.csproj" />
   </ItemGroup>
 </Project>
