(#852) Support NetTopologySuite Geometry properties with GeoJSON transmission.

--- a/sdk/src/server/Microsoft.AspNetCore.Datasync.Abstractions/Microsoft.AspNetCore.Datasync.Abstractions.csproj
+++ b/sdk/src/server/Microsoft.AspNetCore.Datasync.Abstractions/Microsoft.AspNetCore.Datasync.Abstractions.csproj
@@ -4,4 +4,8 @@
   </PropertyGroup>
 
   <Import Project="..\..\Shared.Build.props" />
+
+  <ItemGroup>
+    <PackageReference Include="NetTopologySuite.IO.GeoJSON4STJ" Version="4.0.0" />
+  </ItemGroup>
 </Project>
