--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.EFCore.Tests/Microsoft.AspNetCore.Datasync.EFCore.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.EFCore.Tests/Microsoft.AspNetCore.Datasync.EFCore.Tests.csproj
@@ -4,4 +4,11 @@
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.EFCore\Microsoft.AspNetCore.Datasync.EFCore.csproj" />
     <ProjectReference Include="..\..\shared\Datasync.Common\Datasync.Common.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="xunit" Version="2.6.4" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.5.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
