--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.NSwag.Tests/Microsoft.AspNetCore.Datasync.NSwag.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.NSwag.Tests/Microsoft.AspNetCore.Datasync.NSwag.Tests.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.11" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.20.0" />
   </ItemGroup>
 
@@ -16,5 +17,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="swagger.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="xunit" Version="2.6.4" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.5.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
