--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.Swashbuckle.Tests/Microsoft.AspNetCore.Datasync.Swashbuckle.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.Swashbuckle.Tests/Microsoft.AspNetCore.Datasync.Swashbuckle.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\Shared.Build.props" />
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.Swashbuckle\Microsoft.AspNetCore.Datasync.Swashbuckle.csproj" />
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
@@ -16,5 +17,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="swagger.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="xunit" Version="2.6.4" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.5.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
