--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.Tests/Microsoft.AspNetCore.Datasync.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.Tests/Microsoft.AspNetCore.Datasync.Tests.csproj
@@ -10,4 +10,11 @@
     <ProjectReference Include="..\..\shared\Datasync.Common\Datasync.Common.csproj" />
     <ProjectReference Include="..\..\shared\Datasync.Service\Datasync.Service.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="xunit" Version="2.6.4" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.5.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
