--- a/sdk/test/shared/Datasync.Common/Datasync.Common.csproj
+++ b/sdk/test/shared/Datasync.Common/Datasync.Common.csproj
@@ -18,4 +18,12 @@
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.EFCore\Microsoft.AspNetCore.Datasync.EFCore.csproj" />
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.InMemory\Microsoft.AspNetCore.Datasync.InMemory.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="xunit" Version="2.6.4" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.5.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
