--- a/sdk/test/shared/Datasync.Service/Datasync.Service.csproj
+++ b/sdk/test/shared/Datasync.Service/Datasync.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <Import Project="..\..\Shared.Build.props" />
 
   <ItemGroup>
@@ -17,5 +17,13 @@
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync.InMemory\Microsoft.AspNetCore.Datasync.InMemory.csproj" />
     <ProjectReference Include="..\..\..\src\server\Microsoft.AspNetCore.Datasync\Microsoft.AspNetCore.Datasync.csproj" />
     <ProjectReference Include="..\Datasync.Common\Datasync.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="xunit" Version="2.6.4" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.5.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
