(#854) First pass on the geo.distance plus tests.

--- a/sdk/src/client/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
+++ b/sdk/src/client/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
@@ -7,11 +7,9 @@
     <InternalsVisibleTo Include="Microsoft.Datasync.Client.Tests" />
   </ItemGroup>
 
-  <Import Project="..\..\Shared.Build.props" />
-
   <ItemGroup>
-    <PackageReference Include="NetTopologySuite" Version="2.5.0" />
-    <PackageReference Include="NetTopologySuite.IO.GeoJSON4STJ" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Azure.Core.Spatial" Version="1.1.0" />
   </ItemGroup>
 
+  <Import Project="..\..\Shared.Build.props" />
 </Project>
