--- a/sdk/test/server/Microsoft.AspNetCore.Datasync.Swashbuckle.Tests/Microsoft.AspNetCore.Datasync.Swashbuckle.Tests.csproj
+++ b/sdk/test/server/Microsoft.AspNetCore.Datasync.Swashbuckle.Tests/Microsoft.AspNetCore.Datasync.Swashbuckle.Tests.csproj
@@ -6,6 +6,7 @@
     <ProjectReference Include="..\..\shared\Datasync.Service\Datasync.Service.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
