(v8) Client HTTP model.

--- a/sdk/src/client/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
+++ b/sdk/src/client/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
@@ -8,7 +8,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ensure.That" Version="10.1.0" />
     <PackageReference Include="Microsoft.Azure.Core.Spatial" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
   <Import Project="..\..\Shared.Build.props" />
