(#877) Added IN test (works) while working on client remote table.

--- a/sdk/src/client/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
+++ b/sdk/src/client/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
@@ -13,5 +13,9 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\server\Microsoft.AspNetCore.Datasync.Abstractions\Microsoft.AspNetCore.Datasync.Abstractions.csproj" />
+  </ItemGroup>
+
   <Import Project="..\..\Shared.Build.props" />
 </Project>
