Updated stale processor to latest version

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -12,6 +12,8 @@ on:
   
 permissions:
   contents: read
+  issues: write
+  pull-requests: write
 
 jobs:
   stale:
@@ -22,7 +24,7 @@ jobs:
       pull-requests: write
 
     steps:
-    - uses: actions/stale@f7176fd3007623b69d27091f9b9d4ab7995f0a06 # v5.2.1
+    - uses: actions/stale@v9
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         days-before-stale: 30
@@ -35,7 +37,7 @@ jobs:
         stale-issue-label: 'stale'
         stale-pr-label: 'stale'
 
-    - uses: actions/stale@f7176fd3007623b69d27091f9b9d4ab7995f0a06 # v5.2.1
+    - uses: actions/stale@v9
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         days-before-stale: 5
